# rid

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  file_for_github.txt  flake.nix  justfile  rid_history.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: dxdcvjnvz3b91gvsrhpb7gp156nnj8bf-source  p4a4chdyrsvhz6dgbrpbclnhqs78czgv-source  x3ychf9ichsm5960pg60pl3ksbcd2xxv-source
.github/: release.yml  rust.yml
.github/workflows/: ci.yml  release.yml  rust.yml
nix/: default.nix  module.nix
nix/dev/: shell.nix
nix/release/: default.nix  home-module.nix  module.nix
some/: test.txt
src/: core.rs  garbage_collection.rs  history.rs  lib.rs  main.rs  revert.rs  utils.rs
tests/: core.rs  test.rs
