[package]
name = "rid"
version = "0.1.1"
edition = "2021"
description = "rid a safe alternative to rm"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
